# support-bot

./: .gitignore  PROJECT_OVERVIEW.md  README.md  demo.py  main.py  pyproject.toml  requirements.txt  run_web.bat  run_web.ps1  support_bot.py
data/: products.json
plans/: flask-chat-ui-plan.md
scripts/: demo.py  main.py
src/support_bot/: __init__.py  config.py
src/support_bot/chat/: handler.py
src/support_bot/services/: order_status.py  product_catalog.py
src/support_bot/web/: __init__.py  app.py
src/support_bot/web/static/: app.js  styles.css
src/support_bot/web/templates/: index.html
tests/: add_bulgarian.py  check_chars.py  check_products.py  check_watch.py  debug_norm.py  final_test.py  find_dryer.py  fix_translations.py  test_articles_multiword.py  test_bulgarian.py  test_extract.py  test_full_multiword.py  test_keywords.py  test_multiword.py  test_pattern.py  test_phrase.py  test_products_bg.py  test_search.py  test_smart_watch.py  test_smoke.py  trace_extraction.py  trace_search.py
webapp/: __init__.py  app.py
webapp/static/: app.js  styles.css
webapp/templates/: index.html
